--- a/pom.xml
+++ b/pom.xml
@@ -105,11 +105,12 @@
 		    <artifactId>hibernate-jpa-2.0-api</artifactId>
 		    <version>1.0.1.Final</version>
 		</dependency>
+		
 
 	</dependencies>
 
 	<build>
-		<finalName>financas</finalName>
+		<finalName>sportsgo</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.eclipse.jetty</groupId>
