--- a/pom.xml
+++ b/pom.xml
@@ -106,6 +106,12 @@
 		    <version>1.0.1.Final</version>
 		</dependency>
 		
+		<dependency>
+		    <groupId>org.hibernate</groupId>
+		    <artifactId>hibernate-core</artifactId>
+		    <version>4.3.9.Final</version>
+		</dependency>
+		
 
 	</dependencies>
 
