--- a/pom.xml
+++ b/pom.xml
@@ -1,9 +1,11 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<?xml version="1.0" encoding="UTF-8"?>
+<project xmlns="http://maven.apache.org/POM/4.0.0" 
+		 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+	
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>br.com.sportsgo</groupId>
 	<artifactId>sportsgo</artifactId>
-	<packaging>war</packaging>
 	<version>1.0.0-SNAPSHOT</version>
 	<name>sportsgo Maven Webapp</name>
 	<url>http://maven.apache.org</url>
@@ -78,7 +80,7 @@
 			<type>jar</type>
 			<scope>compile</scope>
 		</dependency>
-		
+			
 		<!-- Apache Database Connection Pool -->
 		<dependency>
 			<groupId>org.apache.commons</groupId>
@@ -88,11 +90,16 @@
 
 		<!-- Hibernate -->
 		<dependency>
+		    <groupId>org.hibernate.javax.persistence</groupId>
+		    <artifactId>hibernate-jpa-2.0-api</artifactId>
+		    <version>1.0.1.Final</version>
+		</dependency>
+		
+		<dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-core</artifactId>
 			<version>4.3.5.Final</version>
 		</dependency>
-
 
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
@@ -104,6 +111,14 @@
 			<artifactId>jackson-core</artifactId>
 			<version>2.5.1</version>
 		</dependency>
+		
+		<!-- Para converter jason com multiplos objetos -->
+	    <dependency>
+	        <groupId>org.codehaus.jackson</groupId>
+	        <artifactId>jackson-mapper-asl</artifactId>
+	        <version>1.8.5</version>
+	    </dependency>
+ 
 
 		<dependency>
 			<groupId>net.sf.jasperreports</groupId>
@@ -128,21 +143,6 @@
 			<artifactId>xml-apis</artifactId>
 			<version>1.4.01</version>
 		</dependency>
-		
-		<!-- https://mvnrepository.com/artifact/org.hibernate.javax.persistence/hibernate-jpa-2.0-api -->
-		<dependency>
-		    <groupId>org.hibernate.javax.persistence</groupId>
-		    <artifactId>hibernate-jpa-2.0-api</artifactId>
-		    <version>1.0.1.Final</version>
-		</dependency>
-		
-		<dependency>
-		    <groupId>org.hibernate</groupId>
-		    <artifactId>hibernate-core</artifactId>
-		    <version>4.3.9.Final</version>
-		</dependency>
-		
-
 	</dependencies>
 
 	<build>
@@ -160,9 +160,4 @@
 			</plugin>
 		</plugins>
 	</build>
-
-
-
-
-
 </project>
